# devcontainer

./: .gitignore  .pre-commit-config.yaml  .tool-versions  .yamllint  CLAUDE.md  Makefile  README.md
.claude/: settings.json
.devcontainer/: .devcontainer.postcreate.sh  catalog-entry.json  devcontainer-functions.sh  devcontainer.json  example-aws-profile-map.json  example-container-env-values.json  fix-line-endings.py  generate-shell-exports.py  project-setup.sh
.devcontainer/nix-family-os/: tinyproxy.conf.template
.devcontainer/wsl-family-os/: README.md  tinyproxy-daemon.sh  tinyproxy.conf.template
.docs/: PYTHON_INSTALL.md
.github/: CODEOWNERS
.github/workflows/: codeql-analysis.yml  main-validation.yml  mirror-devcontainer-image.yml  pr-validation.yml  publish.yml  release.yml  requirements-release.txt
backlog/: vscode-host-settings-automation.md
catalog/default/: catalog-entry.json  devcontainer.json
catalog/test-entry/: catalog-entry.json
caylent-devcontainer-cli/: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANUAL_TESTING.md  Makefile  README.md  coverage.json  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  setup.py
caylent-devcontainer-cli/.github/workflows/: pr-validation.yml  publish.yml
caylent-devcontainer-cli/docs/: CONTRIBUTING.md  MANUAL_TESTING.md  SHELL_COMPLETION.md  TEMPLATE_UPGRADE_ENHANCEMENTS.md
caylent-devcontainer-cli/src/caylent_devcontainer_cli/: __init__.py  cli.py
caylent-devcontainer-cli/src/caylent_devcontainer_cli/commands/: __init__.py  catalog.py  code.py  completion.py  env.py  install.py  setup.py  setup_interactive.py  template.py
caylent-devcontainer-cli/src/caylent_devcontainer_cli/utils/: __init__.py  catalog.py  constants.py  env.py  fs.py  template.py  ui.py  validation.py  version.py
caylent-devcontainer-cli/tests/: README.md
caylent-devcontainer-cli/tests/functional/: __init__.py  conftest.py  test_aws_profile_config.py  test_basic_commands.py  test_catalog_commands.py  test_catalog_functions.py  test_catalog_structure.py  test_cli.py  test_code_command.py  test_code_missing_vars.py  test_devcontainer_config.py  test_fs_utilities.py  test_installation_detection.py  test_interactive_upgrade.py  test_pager_aws_output.py  test_pager_aws_output_fixed.py  test_prompt_confirmation.py  test_requirements_compliance.py  test_setup_command.py  test_setup_version.py  test_template_application.py  test_template_create.py  test_template_load.py  test_template_upgrade.py  test_template_upgrade_force.py  test_template_utilities.py  test_ui_utilities.py  test_update_check.py  test_upgrade_scenarios.py  test_validate_template.py  test_write_project_files.py
caylent-devcontainer-cli/tests/unit/: conftest.py  test_apply_template.py  test_automatic_upgrade.py  test_catalog.py  test_catalog_commands.py  test_cdevcontainer.py  test_cli.py  test_cli_commands.py  test_cli_more.py  test_code.py  test_code_more_coverage.py  test_completion.py  test_deprecated_removals.py  test_env.py  test_env_epilog.py  test_env_utils.py  test_fs.py  test_fs_more.py  test_fs_more_coverage.py  test_fs_more_coverage_2.py  test_init.py  test_install.py  test_install_more.py  test_install_more_coverage.py  test_install_more_coverage_2.py  test_installation_detection.py  test_json_newlines.py  test_manual_upgrade_instructions.py  test_pager_aws_output.py  test_prompt_confirmation.py  test_setup.py  test_setup_examples.py  test_setup_interactive.py  test_setup_interactive_coverage.py  test_setup_interactive_more.py  test_setup_interactive_more_coverage.py  test_setup_interactive_more_coverage_2.py  test_setup_interactive_version.py  test_setup_more.py  test_setup_update.py  (+22 more)
claude-backlog/: AGENT-PROMPT.md  REVIEW-SUPERSEDED-CODE-FINDINGS.md  REVIEW-SUPERSEDED-CODE.md  current-work-unit-in-progress.md  manual-qa-cli-v2.md  v2-complete-requirements.md
claude-backlog/E1-devcontainer-cli-v2/: epic.md
claude-backlog/E1-devcontainer-cli-v2/F1.1-core-dry-refactoring/: feature.md
claude-backlog/E2-ecr-public-image-mirror/: epic.md
collections/default/: catalog-entry.json  devcontainer.json  example-container-env-values.json
collections/no-proxy/: catalog-entry.json  devcontainer.json
collections/proxy/: catalog-entry.json  devcontainer.json
collections/test-collection/: catalog-entry.json
common/devcontainer-assets/: .devcontainer.postcreate.sh  devcontainer-functions.sh  project-setup.sh
common/root-project-assets/: CLAUDE.md
docs/: CATALOG_CREATION.md
git-hooks/: pre-commit  pre-push
platform/infra/: Makefile  README.md
scripts/: debug-host-proxy.sh  surepath-support-response.md
supplemental-docs/: PYTHON_INSTALL.md
(+54 files in other folders)
