[build-system]
requires = ["setuptools>=78.1.1", "wheel~=0.40"]
build-backend = "setuptools.build_meta"

[project]
name = "caylent-devcontainer-cli"
version = "0.1.0"
description = "CLI tool for managing Caylent devcontainers"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Caylent", email = "solution-owners@caylent.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "black~=24.0",
    "flake8~=7.0",
    "isort~=6.0",
    "pytest~=7.0",
    "pytest-cov~=4.0",
    "questionary~=2.0.0",
    "semver~=3.0.0",
    "setuptools>=78.1.1",
    "wheel~=0.40",
]

[project.scripts]
cdevcontainer = "caylent_devcontainer_cli.cli:main"

[project.urls]
Homepage = "https://github.com/caylent-solutions/devcontainer"
Issues = "https://github.com/caylent-solutions/devcontainer/issues"

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 120

[tool.semantic_release]
version_variable = "src/caylent_devcontainer_cli/__init__.py:__version__"
branch = "main"
upload_to_pypi = false
upload_to_release = false
build_command = "python -m build"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "refactor",
    "style",
    "test"
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
